# rock-baby

./: .gitignore  CNAME  README.md  index.html
.github/workflows/: actions-deploy.yml
assets/: index-3XcxwH6u.js  index-BLK7tquH.js  index-BcJGtYO9.css  index-Bh8w1fBY.js  index-C1DaRSew.js  index-C9Yx-WmO.js  index-CDYtQnYY.js  index-CDxXeQcd.js  index-CN8ZbG8a.js  index-CNRoqD8n.css  index-CVvyak4s.js  index-Cf-Z-Lrf.css  index-Crqi9Bak.css  index-DmueJvhT.css  index-u0_9x5hg.js  index-zJd378_Q.js
backend/: Dockerfile  README.md  make-image.sh  pyproject.toml  run-container.sh
backend/src/: __init__.py  __main__.py  api.py  cards.py  data.py  games.py
backend/tests/: test_game.py  test_util.py
frontend/: README.md  index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: app.css  app.tsx  index.css  main.tsx
frontend/src/client/: api.ts
frontend/src/components/: card.tsx  slidingComponent.css  slidingComponent.tsx
frontend/src/pages/: constants.ts  error.tsx  game.tsx  home.tsx  palette.tsx
frontend/src/pages/game/: created.tsx  game.css  game.tsx  playing.css  playing.tsx  showdown.tsx
